--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.17.12",
+    "@expo-google-fonts/pacifico": "^0.2.3",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.6",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.20.0",
     "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.10",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
