--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
